--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Custom CSS -->
   <style>
+    .container{
+        background-color: whitesmoke;
+        box-shadow:1cap;
+    }
+    h1{
+      background-color: #2375e1;
+      color:white;
+    }
     .container {
       margin-top: 20px;
     }
