--- a/index.html
+++ b/index.html
@@ -88,15 +88,60 @@
         <button type="button" class="btn btn-primary btn-add" onclick="addSummary()">Add Summary</button>
         <ul id="summaryList"></ul>
       </div>
-
       <div class="form-group">
-        <label for="education" class="text-left"><i class="fas fa-graduation-cap fa-lg" style="color: #2375e1;"></i> Education Qualifications:</label>
-        <input type="text" id="institution" name="institution" class="form-control" placeholder="Institution Name" />
-        <input type="text" id="course" name="course" class="form-control" placeholder="Course" />
-        <input type="text" id="percentage" name="percentage" class="form-control" placeholder="Percentage" />
-        <button type="button" class="btn btn-primary btn-add" onclick="addEducation()">Add Education</button>
+        <label for="education" class="text-left"
+          >Education Qualifications:</label
+        >
+        <input
+          type="text"
+          id="institution"
+          name="institution"
+          class="form-control"
+          placeholder="Institution Name"
+        />
+        <input
+          type="text"
+          id="course"
+          name="course"
+          class="form-control"
+          placeholder="Course"
+        />
+        <input
+          type="number"
+          id="percentage"
+          name="percentage"
+          class="form-control"
+          placeholder="Percentage"
+        />
+       
+        <span for="startdate" class="">Start Date:</span>
+        <input
+          type="date"
+          id="startdate"
+          name="startdate"
+          class="form-control"
+          placeholder="StartDate"
+        />
+        <span for="enddate" class="">End Date:</span>
+        <input
+          type="date"
+          id="enddate"
+          name="enddate"
+          class="form-control"
+          placeholder="End Date"
+        />
+        <button
+          type="button"
+          class="btn btn-primary btn-add"
+          onclick="addEducation()"
+        >
+          Add Education
+        </button>
+        <span id="per"></span>
         <ul id="educationList"></ul>
       </div>
+
+      
 
       <div class="form-group">
         <label for="achievements" class="text-left"><i class="fas fa-trophy fa-lg" style="color: #2375e1;"></i> Achievements:</label>
